--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,7 +4,7 @@
   "mysugg": "My Suggestions",
   "newsugg": "Create New Suggestion",
   "suggestions": "All Suggestions Data",
-  "avatar": "Vuetify MD",
+  "avatar": "Navigation",
   "buttons": "Buttons",
   "calendar": "Calendar",
   "charts": "Charts",
